Finished writing all text boxes

--- a/Sentiment_Analysis_Test.ipynb
+++ b/Sentiment_Analysis_Test.ipynb
@@ -869,6 +869,9 @@
         "<br><br>\n",
         "\n",
         "###**Pipieline**\n",
+        "\n",
+        "A pipeline enables us to assemble several steps that can be cross-validated tegether while setting different parameters.\n",
+        "\n",
         "\n"
       ]
     },
@@ -886,6 +889,7 @@
         "tvec = TfidfVectorizer()\r\n",
         "clf2 = LogisticRegression(solver = 'lbfgs')\r\n",
         "\r\n",
+        "# Building our pipeline\r\n",
         "model = Pipeline([('vectorizer', tvec), ('classifier', clf2)])\r\n",
         "model.fit(IV_train, DV_train)"
       ],
