Labled each step

--- a/Sentiment_Analysis_Test.ipynb
+++ b/Sentiment_Analysis_Test.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Sentiment_Analysis_Test.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,7 +20,10 @@
         "id": "6GLHmU5li8PM"
       },
       "source": [
-        "#**Abstract** [incomplete]\r\n",
+        "#**Abstract**\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
         "\r\n",
         "In a world full of different products and services offered by many different companies, it is natural for people to be curious about the quality of a certain solution. Moreover, companies want to sell their products and services \r\n",
         "\r\n",
@@ -28,6 +32,15 @@
         "Our project focuses on sentiment analysis of movie reviews. This allows an individual to get closer to the consensus when it comes to the quality of the movie that is being reviewed. This data can be used by anyone from the makers of the film to individuals who are simply interested in the movie to gauge what people think of it.\r\n",
         "\r\n",
         "Similar process of sentiment analysis can be applied for any product, service or solution for evaluation, aiding further refinements.\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5_B14L8sWb-2"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -178,6 +191,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tshUYhc6W_to"
+      },
+      "source": [
+        "# **Preprocessing Data**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GFRQ0jL-lMr0"
       },
       "source": [
@@ -227,7 +249,8 @@
         "id": "oQRq4Dj8sEMw"
       },
       "source": [
-        "# **Step 4: Preprocessing the Textual Data**"
+        "# **Step 4: Applying Preprocessing Techniques on the Textual Data**\n",
+        "\n"
       ]
     },
     {
@@ -772,7 +795,7 @@
         "id": "Vh_bPdPKT6wv"
       },
       "source": [
-        "# **The Model**"
+        "# **Building The Model**"
       ]
     },
     {
@@ -782,6 +805,15 @@
       },
       "source": [
         "In the dataset, we have our **independent variables** (review) and **dependent variable** (sentiment). While most of the data will be used for teaching the model, we wil keep some aside for validation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7ezbhx_9XNV7"
+      },
+      "source": [
+        "# **Step 6: Splitting the Dataset**"
       ]
     },
     {
@@ -824,6 +856,8 @@
         "id": "T-6AxIIVKs1N"
       },
       "source": [
+        "#**Step 7: Creating Pipeline and Fitting Data**\n",
+        "\n",
         "### **Term Frequency-Inverse Document Frequency (TF-IDC) Vectorization**\n",
         "\n",
         "**TF-IDF**\n",
@@ -869,6 +903,9 @@
         "<br><br>\n",
         "\n",
         "###**Pipieline**\n",
+        "\n",
+        "A pipeline enables us to assemble several steps that can be cross-validated tegether while setting different parameters.\n",
+        "\n",
         "\n"
       ]
     },
@@ -886,6 +923,7 @@
         "tvec = TfidfVectorizer()\r\n",
         "clf2 = LogisticRegression(solver = 'lbfgs')\r\n",
         "\r\n",
+        "# Building our pipeline\r\n",
         "model = Pipeline([('vectorizer', tvec), ('classifier', clf2)])\r\n",
         "model.fit(IV_train, DV_train)"
       ],
@@ -990,7 +1028,7 @@
         "id": "7yKzQhvVZi7i"
       },
       "source": [
-        "# **Testing**"
+        "# **Step 8: Testing**"
       ]
     },
     {
